# aementor

./: CMakeLists.txt  README.md  install_dev_packages_ubuntu
src/: RESTClient.cpp  RESTClient.hpp  main.cpp
src/cardGame/: main.cpp
